# TP_PIPELINE

./: .env  README.md  pyproject.toml
data/processed/: chocolats_20251217_012304.parquet
data/raw/: chocolats_raw_20251217_002302.json  chocolats_raw_20251217_012303.json
data/reports/: chocolats_quality_20251217_002304.md  chocolats_quality_20251217_012304.md
pipeline/: config.py  enricher.py  local_llm.py  main.py  models.py  quality.py  storage.py  transformer.py
pipeline/fetchers/: adresse.py  base.py  openfoodfacts.py  secondary_api.py
tests/: test_fetchers.py  test_transformer.py
